# interview-python-check

./: Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
py_check/: main.py
py_problem/: main.py
tests/: test_main.py
