[tool.poetry]
name = "py_check"
version = "0.1.0"
description = ""
authors = ["Stephen Onnen <sonnen@sourceallies.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.11.1"
coverage = "^5.5"
mypy = "^0.910"
black = "^21.9b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
